--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 
                              <ul class="home-social">
             <li>
-                <a href="https://www.facebook.com/rishabhptr" target="_blank"><i class="fa-facebook fa" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://www.facebook.com/rishabhks07" target="_blank"><i class="fa-facebook fa" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
                 <a href="https://github.com/rishabhptr" target="_blank"><i class="fa fa-github" aria-hidden="true"></i><span>Github</span></a>
             </li>
             <li>
-                <a href="https://Instagram.com/rishabhptr" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://Instagram.com/rishabhks07" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
                 <a href="https://linkedin.com/in/rishabhptr" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
